--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/MateusAndrade/MateusAndrade.github.io#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
+    "grunt-contrib-cssmin": "^2.1.0",
     "grunt-contrib-sass": "^1.0.0"
   }
 }
