--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "homepage": "https://github.com/MateusAndrade/MateusAndrade.github.io#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.1.0",
     "grunt-contrib-sass": "^1.0.0"
+  },
+  "dependencies": {
+    "angular": "^1.6.4"
   }
 }
