--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "grunt-contrib-sass": "^1.0.0"
   },
   "dependencies": {
-    "angular": "^1.6.4"
+    "angular": "^1.6.4",
+    "angular-route": "^1.6.4",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1"
   }
 }
